--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             Render = Matter.Render,
             Runner = Matter.Runner,
             Common = Matter.Common,
+            Events = Matter.Events,
             MouseConstraint = Matter.MouseConstraint,
             Mouse = Matter.Mouse,
             World = Matter.World,
@@ -44,23 +45,36 @@
             Svg = Matter.Svg,
             Bodies = Matter.Bodies;
 
-
-
+            function percentX(percent) {
+              return Math.round(percent/100 * window.innerWidth);
+            }
+            function percentY(percent) {
+              return Math.round(percent/100 * window.innerHeight);
+            }
+            var scaler = percentY(100/1000);
         // create engine
         var engine = Engine.create(),
             world = engine.world;
             engine.world.gravity.y = 0;
         // create renderer
+        var cannyw = window.innerWidth;
+        var cannyh = window.innerHeight;
+        window.onresize = function()
+        {
+          cannyw = window.innerWidth;
+          cannyh = window.innerHeight;
+        }
         var render = Render.create({
             element: document.body,
             engine: engine,
             options: {
-                width: window.innerWidth,
-                height: window.innerHeight,
+                width: cannyw,
+                height: cannyh,
                 wireframes: false,
                 background: '#ffffff'
             }
         });
+
 
 
         Render.run(render);
@@ -86,12 +100,12 @@
 
                         $(data).find('path').each(function(i, path) {
                             var points = Svg.pathToVertices(path, 10);
-                            vertexSets.push(Vertices.scale(points, 0.4, 0.4));
+                            vertexSets.push(Vertices.scale(points, scaler, scaler));
                         });
 
                         World.add(world, Bodies.fromVertices(100 + i * 150, 200 + i * 50, vertexSets, {
                           density: 1.04,
-		                      friction: 0.01,
+		                      friction: 1.01,
                           frictionAir: 0.00001,
                           restitution: 0.8,
                             render: {
@@ -99,13 +113,27 @@
                                 strokeStyle: color,
                                 lineWidth: 1
                             }
-                        }, true));
+                          }, true));
                     });
                 })(i);
             }
 
 
         }
+
+
+
+                // Events.on(mouseConstraint, 'mousedown', function(event) {
+                //     var mousePosition = event.mouse.position;
+                //     Bodies.force = {
+                //         x: 0.001,
+                //         y: -0.01
+                //     };
+                //
+                //     console.log('mousedown at ' + mousePosition.x + ' ' + mousePosition.y);
+                // })
+
+
 
         World.add(world, [
 
@@ -133,6 +161,23 @@
         // keep the mouse in sync with rendering
         render.mouse = mouse;
 
+
+
+
+        //Collision of objects
+        Events.on(engine, 'collisionStart', function(event) {
+            console.log("colide");
+
+        });
+
+
+        // an example of using mouse events on a mouse
+        Events.on(mouseConstraint, 'mouseup', function(event) {
+            var mousePosition = event.mouse.position;
+            console.log('mouseup at ' + mousePosition.x + ' ' + mousePosition.y);
+
+          });
+
         // // fit the render viewport to the scene
         // Render.lookAt(render, {
         //     min: { x: 0, y: 0 },
@@ -140,6 +185,9 @@
         // });
 
         // context for MatterTools.Demo
+
+
+
         return {
             engine: engine,
             runner: runner,
@@ -155,6 +203,8 @@
     if (typeof module !== 'undefined') {
         module.exports = Example[Object.keys(Example)[0]];
     }
+
+/////////NOISE
 
 
     </script>
