--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Matter -->
     <script src="./js/matter.js"></script>
 
+
     <!-- MatterTools -->
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <!-- <script src="./lib/matter-tools.gui.js"></script>
@@ -52,18 +53,24 @@
               return Math.round(percent/100 * window.innerHeight);
             }
             var scaler = percentY(100/1000);
+
+
+            // oscillator
+
+        // creat
+
+
         // create engine
         var engine = Engine.create(),
             world = engine.world;
-            engine.world.gravity.y = 0;
-        // create renderer
+            engine.world.gravity.y = -0.00002;
+            engine.world.gravity.x = 0.00001;
+
+
+            //create e renderer
         var cannyw = window.innerWidth;
         var cannyh = window.innerHeight;
-        window.onresize = function()
-        {
-          cannyw = window.innerWidth;
-          cannyh = window.innerHeight;
-        }
+
         var render = Render.create({
             element: document.body,
             engine: engine,
@@ -75,7 +82,13 @@
             }
         });
 
-
+        // var counter = 0;
+        // Events.on(engine, 'beforeUpdate', function(event) {
+        //   counter += 1;
+        //
+        //   var py = 0.00 + 0.001 * Math.sin(engine.timing.timestamp * 0.002);
+        //   console.log(py)
+        // });
 
         Render.run(render);
 
@@ -103,11 +116,11 @@
                             vertexSets.push(Vertices.scale(points, scaler, scaler));
                         });
 
-                        World.add(world, Bodies.fromVertices(100 + i * 150, 200 + i * 50, vertexSets, {
+                        World.add(world, Bodies.fromVertices(percentX(100/5) + i * 200, percentY(100/4) + i * 50, vertexSets, {
                           density: 1.04,
 		                      friction: 1.01,
                           frictionAir: 0.00001,
-                          restitution: 0.8,
+                          restitution: 1.1,
                             render: {
                                 fillStyle: color,
                                 strokeStyle: color,
@@ -122,19 +135,6 @@
         }
 
 
-
-                // Events.on(mouseConstraint, 'mousedown', function(event) {
-                //     var mousePosition = event.mouse.position;
-                //     Bodies.force = {
-                //         x: 0.001,
-                //         y: -0.01
-                //     };
-                //
-                //     console.log('mousedown at ' + mousePosition.x + ' ' + mousePosition.y);
-                // })
-
-
-
         World.add(world, [
 
           // x, y, w, h
@@ -143,6 +143,9 @@
             Bodies.rectangle(window.innerWidth+25, window.innerHeight/2, 50, window.innerHeight, { isStatic: true }), //right
             Bodies.rectangle(-25, window.innerHeight/2, 50, window.innerHeight, { isStatic: true }) //left
         ]);
+
+
+
 
         // add mouse control
         var mouse = Mouse.create(render.canvas),
@@ -221,6 +224,8 @@
         border-radius: 0;
         max-width: none;
         max-height: none;
+        width: 100%;
+        height: 100vh;
       }
       body {
         margin: 0;
