--- a/index.html
+++ b/index.html
@@ -21,199 +21,138 @@
 
 
     <!-- MatterTools -->
-    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-    <!-- <script src="./lib/matter-tools.gui.js"></script>
-    <script src="./lib/matter-tools.inspector.js"></script> -->
-    <script src="./lib/matter-tools.demo.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Plugins -->
     <script src="./lib/matter-wrap.js"></script>
 
 
     <script>
+    window.addEventListener('load', function() {
 
-    var Example = Example || {};
-    Example.svg = function() {
-        var Engine = Matter.Engine,
-            Render = Matter.Render,
-            Runner = Matter.Runner,
-            Common = Matter.Common,
-            Events = Matter.Events,
-            MouseConstraint = Matter.MouseConstraint,
-            Mouse = Matter.Mouse,
-            World = Matter.World,
-            Vertices = Matter.Vertices,
-            Svg = Matter.Svg,
-            Bodies = Matter.Bodies;
+    	//Fetch our canvas
+    	var canvas = document.getElementById('world');
+      var cannyw = window.innerWidth;
+      var cannyh = window.innerHeight;
+      var Engine = Matter.Engine,
+          Render = Matter.Render,
+          Runner = Matter.Runner,
+          Common = Matter.Common,
+          Events = Matter.Events,
+          MouseConstraint = Matter.MouseConstraint,
+          Mouse = Matter.Mouse,
+          World = Matter.World,
+          Vertices = Matter.Vertices,
+          Svg = Matter.Svg,
+          Bodies = Matter.Bodies;
+      function percentX(percent) {
+        return Math.round(percent/100 * window.innerWidth);
+      }
+      function percentY(percent) {
+        return Math.round(percent/100 * window.innerHeight);
+      }
+      var scaler = percentY(100/1000);
+      var Svg = Matter.Svg;
+    	//Setup Matter JS
+    	var engine = Matter.Engine.create();
+    	var world = engine.world;
+    	var render = Matter.Render.create({
+    		canvas: canvas,
+    		engine: engine,
+    		options: {
+    			width: cannyw,
+    			height: cannyh,
+    			background: 'transparent',
+    			wireframes: false,
+    			showAngleIndicator: false
+    		}
+    	});
 
-            function percentX(percent) {
-              return Math.round(percent/100 * window.innerWidth);
-            }
-            function percentY(percent) {
-              return Math.round(percent/100 * window.innerHeight);
-            }
-            var scaler = percentY(100/1000);
-
-
-            // oscillator
-
-        // creat
-
-
-        // create engine
-        var engine = Engine.create(),
-            world = engine.world;
-            engine.world.gravity.y = -0.00002;
-            engine.world.gravity.x = 0.00001;
-
-
-            //create e renderer
-        var cannyw = window.innerWidth;
-        var cannyh = window.innerHeight;
-
-        var render = Render.create({
-            element: document.body,
-            engine: engine,
-            options: {
-                width: cannyw,
-                height: cannyh,
-                wireframes: false,
-                background: '#ffffff'
-            }
-        });
-
-        // var counter = 0;
-        // Events.on(engine, 'beforeUpdate', function(event) {
-        //   counter += 1;
-        //
-        //   var py = 0.00 + 0.001 * Math.sin(engine.timing.timestamp * 0.002);
-        //   console.log(py)
-        // });
-
-        Render.run(render);
-
-        // create runner
-        var runner = Runner.create();
-        Runner.run(runner, engine);
-        // add bodies
-        var svgs = [
-            'enjoyment',
-            'fear',
-            'anger',
-            'sadness',
-            'disgust'
-        ];
-
-        if (typeof $ !== 'undefined') {
-            for (var i = 0; i < svgs.length; i += 1) {
-                (function(i) {
-                    $.get('./svg/' + svgs[i] + '.svg').done(function(data) {
-                        var vertexSets = [],
-                            color = Common.choose(['#000000']);
-
-                        $(data).find('path').each(function(i, path) {
-                            var points = Svg.pathToVertices(path, 10);
-                            vertexSets.push(Vertices.scale(points, scaler, scaler));
-                        });
-
-                        World.add(world, Bodies.fromVertices(percentX(100/5) + i * 200, percentY(100/4) + i * 50, vertexSets, {
-                          density: 1.04,
-		                      friction: 1.01,
-                          frictionAir: 0.00001,
-                          restitution: 1.1,
-                            render: {
-                                fillStyle: color,
-                                strokeStyle: color,
-                                lineWidth: 1
-                            }
-                          }, true));
-                    });
-                })(i);
-            }
-
-
-        }
-
-
-        World.add(world, [
-
-          // x, y, w, h
-            Bodies.rectangle(window.innerWidth/2, -25, window.innerWidth, 50, { isStatic: true }), //top
-            Bodies.rectangle(window.innerWidth/2, window.innerHeight+25, window.innerWidth, 50, { isStatic: true }), //bottom
-            Bodies.rectangle(window.innerWidth+25, window.innerHeight/2, 50, window.innerHeight, { isStatic: true }), //right
-            Bodies.rectangle(-25, window.innerHeight/2, 50, window.innerHeight, { isStatic: true }) //left
-        ]);
+      engine.world.gravity.y = -0.00002;
+      engine.world.gravity.x = 0.00001;
 
 
 
+      var svgs = [
+          'enjoyment',
+          'fear',
+          'anger',
+          'sadness',
+          'disgust'
+      ];
 
-        // add mouse control
-        var mouse = Mouse.create(render.canvas),
-            mouseConstraint = MouseConstraint.create(engine, {
-                mouse: mouse,
-                constraint: {
-                    stiffness: 0.2,
-                    render: {
-                        visible: false
-                    }
-                }
-            });
+      if (typeof $ !== 'undefined') {
+          for (var i = 0; i < svgs.length; i += 1) {
+              (function(i) {
+                  $.get('./svg/' + svgs[i] + '.svg').done(function(data) {
+                      var vertexSets = [],
+                          color = Matter.Common.choose(['#000000']);
 
-        World.add(world, mouseConstraint);
+                      $(data).find('path').each(function(i, path) {
+                          var points = Svg.pathToVertices(path, 10);
+                          vertexSets.push(Matter.Vertices.scale(points, scaler, scaler));
+                      });
+                      var Thingers = Matter.Bodies.fromVertices(percentX(100/5) + i * 200, percentY(100/4) + i * 50, vertexSets, {
+                        density: 1.04,
+                        friction: 1.01,
+                        frictionAir: 0.00001,
+                        restitution: 1.1,
+                          render: {
+                              fillStyle: color,
+                              strokeStyle: color,
+                              lineWidth: 1
+                          }
+                        }, true);
 
-        // keep the mouse in sync with rendering
-        render.mouse = mouse;
-
-
-
-
-        //Collision of objects
-        Events.on(engine, 'collisionStart', function(event) {
-
-            // var audio = new Audio('./audio/SquareS42.mp3');
-            // audio.play();
-
-
-
-            var musicFiles = ["./audio/audioone.mp3", "./audio/audiotwo.mp3", "./audio/audiothree.mp3", "./audio/audiofour.mp3", "./audio/audiofive.mp3"];
-            var randNum = Math.floor(Math.random()*musicFiles.length)
-            var audio = new Audio(musicFiles[randNum]);
-            audio.play();
-        });
+                      Matter.World.add(world, [Thingers]);
+                  });
+              })(i);
+          }
 
 
-        // an example of using mouse events on a mouse
-        Events.on(mouseConstraint, 'mouseup', function(event) {
-            var mousePosition = event.mouse.position;
-            console.log('mouseup at ' + mousePosition.x + ' ' + mousePosition.y);
+      }
 
-          });
 
-        // // fit the render viewport to the scene
-        // Render.lookAt(render, {
-        //     min: { x: 0, y: 0 },
-        //     max: { x: 800, y: 600 }
-        // });
+      Matter.World.add(world, [
 
-        // context for MatterTools.Demo
+        // x, y, w, h
+          Matter.Bodies.rectangle(window.innerWidth/2, -50, window.innerWidth, 100, { isStatic: true }), //top
+          Matter.Bodies.rectangle(window.innerWidth/2, window.innerHeight+50, window.innerWidth, 100, { isStatic: true }), //bottom
+          Matter.Bodies.rectangle(window.innerWidth+50, window.innerHeight/2, 100, window.innerHeight, { isStatic: true }), //right
+          Matter.Bodies.rectangle(-50, window.innerHeight/2, 100, window.innerHeight, { isStatic: true }) //left
+      ]);
 
 
 
-        return {
-            engine: engine,
-            runner: runner,
-            render: render,
-            canvas: render.canvas,
-            stop: function() {
-                Matter.Render.stop(render);
-                Matter.Runner.stop(runner);
-            }
-        };
-    };
+    	//Make interactive
+    	var mouseConstraint = Matter.MouseConstraint.create(engine, { //Create Constraint
+    		element: canvas,
+    		constraint: {
+    			render: {
+    	        	visible: false
+    	    	},
+    	    	stiffness:0.8
+    	    }
+    	});
+      mouseConstraint.mouse.element.removeEventListener("mousewheel", mouseConstraint.mouse.mousewheel);
+      mouseConstraint.mouse.element.removeEventListener("DOMMouseScroll", mouseConstraint.mouse.mousewheel);
+    	Matter.World.add(world, mouseConstraint);
 
-    if (typeof module !== 'undefined') {
-        module.exports = Example[Object.keys(Example)[0]];
-    }
+
+      Events.on(engine, 'collisionStart', function(event) {
+
+          // var audio = new Audio('./audio/SquareS42.mp3');
+          // audio.play();
+          var musicFiles = ["./audio/audioone.mp3", "./audio/audiotwo.mp3", "./audio/audiothree.mp3", "./audio/audiofour.mp3", "./audio/audiofive.mp3"];
+          var randNum = Math.floor(Math.random()*musicFiles.length)
+          var audio = new Audio(musicFiles[randNum]);
+          audio.play();
+      });
+
+    	//Start the engine
+    	Matter.Engine.run(engine);
+    	Matter.Render.run(render);
+
+    });
 
 /////////NOISE
 
@@ -228,7 +167,7 @@
       .matter-header-outer{
         display: none;
       }
-      .matter-demo canvas{
+      canvas{
         border-radius: 0;
         max-width: none;
         max-height: none;
@@ -263,6 +202,15 @@
     </style>
   </head>
   <body>
-    <script src="./js/Demo.js"></script>
+<canvas id="world"></canvas>
+    <div>
+      <h1>
+        Lorem ipsum dolor sit amet
+      </h1>
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
+      </p>
+    </div>
   </body>
 </html>
