--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="noindex">
 
     <title>Matter.js Demo</title>
+    <link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" />
 
     <!-- Libs -->
     <script type="text/javascript" src="./lib/decomp.js"></script>
@@ -27,261 +28,12 @@
 
 
     <script>
-    window.addEventListener('load', function() {
-
-    	//Fetch our canvas
-    	var canvas = document.getElementById('world');
-      var cannyw = window.innerWidth;
-      var cannyh = window.innerHeight;
-      var Engine = Matter.Engine,
-          Render = Matter.Render,
-          Runner = Matter.Runner,
-          Common = Matter.Common,
-          Events = Matter.Events,
-          MouseConstraint = Matter.MouseConstraint,
-          Mouse = Matter.Mouse,
-          World = Matter.World,
-          Vertices = Matter.Vertices,
-          Svg = Matter.Svg,
-          Bodies = Matter.Bodies;
-      function percentX(percent) {
-        return Math.round(percent/100 * window.innerWidth);
-      }
-      function percentY(percent) {
-        return Math.round(percent/100 * window.innerHeight);
-      }
-      var scaler = percentY(100/1000);
-      var Svg = Matter.Svg;
-    	//Setup Matter JS
-    	var engine = Matter.Engine.create();
-    	var world = engine.world;
-    	var render = Matter.Render.create({
-    		canvas: canvas,
-    		engine: engine,
-    		options: {
-    			width: cannyw,
-    			height: cannyh,
-    			background: '#000000',
-    			wireframes: false,
-    			showAngleIndicator: false
-    		}
-    	});
-
-      engine.world.gravity.y = -0.00002;
-      engine.world.gravity.x = 0.00001;
-
-
-
-      var svgs = [
-          'enjoyment',
-          'fear',
-          'anger',
-          'sadness',
-          'disgust'
-      ];
-
-      if (typeof $ !== 'undefined') {
-          for (var i = 0; i < svgs.length; i += 1) {
-              (function(i) {
-                  $.get('./svg/' + svgs[i] + '.svg').done(function(data) {
-                      var vertexSets = [],
-                          color = Matter.Common.choose(['#ffffff']);
-
-                      $(data).find('path').each(function(i, path) {
-                          var points = Svg.pathToVertices(path, 10);
-                          vertexSets.push(Matter.Vertices.scale(points, scaler/1.2, scaler/1.2));
-                      });
-
-                      Matter.World.add(world, Matter.Bodies.fromVertices(percentX(100/5) + i * 200, percentY(100/6) + i * 50, vertexSets, {
-                        density: 1.04,
-                        friction: 1.01,
-                        frictionAir: 0.00001,
-                        restitution: 0.4,
-                          render: {
-                              fillStyle: color,
-                              strokeStyle: color,
-                              lineWidth: 1
-                          }
-                        }, true));
-
-                  });
-              })(i);
-          }
-      }
-
-
-      var good = Matter.Bodies.rectangle(percentX(100/5), percentY(100/1.2), 300, 90, {
-        render: {
-          sprite: {
-            texture: './svg/good.svg',
-            xScale: 1,
-            yScale: 1
-          }
-        }
-      });
-
-      var friction = Matter.Bodies.rectangle(percentX(100/1.5), percentY(100/1.2), 300, 80, {
-        render: {
-          sprite: {
-            texture: './svg/friction.svg',
-            xScale: 1.2,
-            yScale: 1.2
-          }
-        }
-      });
-
-      Matter.Body.setVelocity( good, {x: 0, y: -3});
-      Matter.Body.setVelocity( friction, {x: 0, y: -3});
-      Matter.Body.scale( friction, 1.2, 1.2);
-
-      Matter.World.add(world, [friction, good]);
-
-      Matter.World.add(world, [
-
-        // x, y, w, h
-          Matter.Bodies.rectangle(window.innerWidth/2, 0, window.innerWidth, 100, { isStatic: true, render: {fillStyle: "#ffffff",strokeStyle:  "#ffffff",lineWidth: 1} }), //top
-          Matter.Bodies.rectangle(window.innerWidth/2, window.innerHeight, window.innerWidth, 100, { isStatic: true, render: {fillStyle: "#ffffff",strokeStyle:  "#ffffff",lineWidth: 1} }), //bottom
-          Matter.Bodies.rectangle(window.innerWidth, window.innerHeight/2, 100, window.innerHeight, { isStatic: true, render: {fillStyle: "#ffffff",strokeStyle:  "#ffffff",lineWidth: 1} }), //right
-          Matter.Bodies.rectangle(0, window.innerHeight/2, 100, window.innerHeight, { isStatic: true, render: {fillStyle: "#ffffff",strokeStyle:  "#ffffff",lineWidth: 1} }) //left
-      ]);
-
-
-    	//Make interactive
-    	var mouseConstraint = Matter.MouseConstraint.create(engine, { //Create Constraint
-    		element: canvas,
-    		constraint: {
-    			render: {
-    	        	visible: false
-    	    	},
-    	    	stiffness:0.8
-    	    }
-    	});
-      mouseConstraint.mouse.element.removeEventListener("mousewheel", mouseConstraint.mouse.mousewheel);
-      mouseConstraint.mouse.element.removeEventListener("DOMMouseScroll", mouseConstraint.mouse.mousewheel);
-    	Matter.World.add(world, mouseConstraint);
-
-
-      Events.on(engine, 'collisionStart', function(event) {
-
-          // var audio = new Audio('./audio/SquareS42.mp3');
-          // audio.play();
-          var musicFiles = ["./audio/horn/01.mp3", "./audio/horn/02.mp3", "./audio/horn/03.mp3", "./audio/horn/04.mp3", "./audio/horn/05.mp3", "./audio/horn/06.mp3", "./audio/horn/07.mp3", "./audio/horn/08.mp3", "./audio/horn/09.mp3", "./audio/horn/10.mp3"];
-          var randNum = Math.floor(Math.random()*musicFiles.length)
-          var audio = new Audio(musicFiles[randNum]);
-          audio.play();
-
-      });
-
-    	//Start the engine
-    	Matter.Engine.run(engine);
-    	Matter.Render.run(render);
-    });
-
-/////////NOISE
-
 
     </script>
 
 
     <style type="text/css">
-      * {
-        box-sizing: border-box;
-      }
-      @font-face {
-          font-family: 'radio_groteskregular';
-          src: url('fonts/radiogrotesk-regular-webfont.woff2') format('woff2'),
-               url('fonts/radiogrotesk-regular-webfont.woff') format('woff');
-          font-weight: normal;
-          font-style: normal;
 
-      }
-      .matter-header-outer{
-        display: none;
-      }
-      canvas{
-        border-radius: 0;
-        max-width: none;
-        max-height: none;
-        width: 100%;
-        height: 100vh;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'radio_groteskregular', sans-serif;
-        font-size: 30px;
-      }
-
-      .matter-js-compare-build {
-        position: absolute;
-        background: none;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: 0;
-        z-index: 1;
-        pointer-events: none;
-      }
-
-      .matter-js-compare-build .matter-header-outer {
-        display: none;
-      }
-
-      .matter-js-compare-build canvas {
-        opacity: 0.5;
-        background: transparent !important;
-      }
-
-      .navTB{
-        height: 50px;
-        background: white;
-        color: black;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        width: 100%;
-        position: fixed;
-        top:0;
-      }
-
-      .navLR{
-        width: 50px;
-        background: white;
-        color: black;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        height: 100vh;
-        position: fixed;
-        top:0;
-      }
-      .eb{
-        bottom:0;
-        top:auto;
-      }
-      .home, .contributors{
-        z-index: 99;
-      }
-      .home p, .contributors p{
-        transform: rotate(-90deg);
-      }
-      .home{
-        border-right: 2px solid black;
-      }
-      .contributors{
-        right: 0;
-        border-left: 2px solid black;
-      }
-      .pagecontent{
-        width: 80%;
-        margin: 0 auto 20vh;
-      }
     </style>
   </head>
   <body>
@@ -381,5 +133,6 @@
     </div>
 
     </div>
+    <script src="./js/functions.js"></script>
   </body>
 </html>
