--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Matter -->
     <script src="./js/matter.js"></script>
-    
+
 
     <!-- MatterTools -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -39,6 +39,7 @@
   <body>
 
 <canvas id="world"></canvas>
+<script src="./js/functions.js"></script>
 
   <div class="home navLR">
     <p>Home<p>
@@ -63,76 +64,23 @@
       </h1>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
+        As an agency, <a href="https://www.emotivebrand.com/"Emotive Brand</a> has long believed in the <a href="https://emotivefeels.com/">power of positive emotions</a> to inspire action and change behavior. We’re not alone. In our line of work, we’re taught to lead with optimism, to solve pain points before they appear, to always show the desired future state. This type of thinking may reduce friction—but it’s flawed.
       </p>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
+        Real life is messier. Two things can be true at once. We often experience opposing emotions—even if we don’t have names for them—that color and cloud our worldview. But friction and contradiction are not things to shy away from. In fact, embracing these forces is the only way we can truly move forward.
       </p>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
+        In this historical moment, we’re owning our failure to acknowledge the power of negative emotions to drive awareness, address inequality, and cut through the noise. Negativity is a catalyst in its own right—and it’s driving us to rethink our processes and blindspots. We’re working to decolonize and diversify our thinking. We’re getting comfortable being uncomfortable. We’re slowing down. We know it’s not enough, but it’s a starting point. Here’s to good friction.
       </p>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
-      </p>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque elit ornare purus pulvinar, eu volutpat massa pretium. Morbi consequat pretium magna vel lobortis. Sed viverra, augue eget luctus malesuada, ante turpis tempor neque, congue egestas ipsum ligula sed dui. Pellentesque et tristique orci. Morbi eu consequat nulla. Morbi auctor consectetur ligula hendrerit efficitur. Duis semper tempus lectus, at dapibus dolor tincidunt id. Curabitur at arcu porta, congue dolor nec, interdum tellus. Aliquam lacinia velit ut nibh cursus volutpat.
+        <a href="mailto:tracyl@emotivebrand.com">Get In Touch</a>
       </p>
 
     </div>
 
     </div>
-    <script src="./js/functions.js"></script>
   </body>
 </html>
