--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
   <div class="pagecontent">
     <div>
       <h1>
-        Lorem ipsum dolor sit amet
+        About<br>
+        The<br>
+        Project<br>
       </h1>
 
       <p>
