updated eb text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </h1>
 
       <p>
-        As an agency, <a href="https://www.emotivebrand.com/"Emotive Brand</a> has long believed in the <a href="https://emotivefeels.com/">power of positive emotions</a> to inspire action and change behavior. We’re not alone. In our line of work, we’re taught to lead with optimism, to solve pain points before they appear, to always show the desired future state. This type of thinking may reduce friction—but it’s flawed.
+        As an agency, <a href="https://www.emotivebrand.com/">Emotive Brand</a> has long believed in the <a href="https://emotivefeels.com/">power of positive emotions</a> to inspire action and change behavior. We’re not alone. In our line of work, we’re taught to lead with optimism, to solve pain points before they appear, to always show the desired future state. This type of thinking may reduce friction—but it’s flawed.
       </p>
 
       <p>
